fix: overflow-y caused dual scrollbars on desktop

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -70,7 +70,6 @@ body {
 .layout-grid-container {
   margin-top: 6rem;
   scroll-snap-align: start;
-  overflow-y: scroll;
 }
 
 .banner-img {
